--- a/.gitignore
+++ b/.gitignore
@@ -14,15 +14,12 @@
 # production
 /build
 /dist
-/lib
+lib
 /esm
 /doc-site
 /types
 
-# umi
-.umi
-.umi-production
-.env.local
+/.tsbuildinfo
 
 
 # misc
@@ -35,3 +32,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
