--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "homepage": "https://github.com/HITlicj/atom#readme",
   "devDependencies": {
+    "@types/node": "^18.7.3",
     "lerna": "^5.1.4"
   }
 }
