--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /.vscode
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 /site
@@ -23,13 +23,6 @@ types
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 
