--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "133f265173027b0531da0b636f2deb6609b55a1e"
 }
