--- a/package.json
+++ b/package.json
@@ -18,9 +18,27 @@
   "workspaces": [
     "packages/*"
   ],
+  "lint-staged": {
+    "*.ts?(x)": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.less": [
+      "stylelint --syntax less --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "homepage": "https://github.com/HITlicj/atom#readme",
   "devDependencies": {
     "@types/node": "^18.7.3",
-    "lerna": "^5.1.4"
+    "lerna": "^5.1.4",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3"
   }
 }
