--- a/packages/babel-config/package.json
+++ b/packages/babel-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atom-web/babel-config",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
